# poptrie

./: CMakeLists.txt  configure.ac  poptrie.h  poptrie4.c  poptrie6.c  poptrie_private.h
tests/: basic.c  basic6.c  mr_p46.txt  rrc01-12.1.1.txt_100K.tr
